# lab8

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.bak  README.md  main.cpp
data/: Planets.json  data.txt
html/: _file_processing_8h.html  _file_processing_8h_source.html  _planet_8h.html  _planet_8h_source.html  _planet_storage_8h.html  _planet_storage_8h_source.html  _server_8h.html  _server_8h_source.html  _text_processing_8h.html  _text_processing_8h_source.html  annotated.html  class_file_processing-members.html  class_file_processing.html  class_planet-members.html  class_planet.html  class_planet_storage-members.html  class_planet_storage.html  class_server-members.html  class_server.html  class_text_processing-members.html  class_text_processing.html  classes.html  dir_5302bec79b689f0f247f14453837c900.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_a7b39092111346681b5c5eeb783e7da0.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d8b9556c6f38787f4045366f8eeaec4e.html  dir_f89abcb304c928c7d889aa5625570de5.html  files.html  functions.html  functions_func.html  index.html  menudata.js  struct_request-members.html  struct_request.html
include/: FileProcessing.h  Planet.h  PlanetStorage.h  Server.h  TextProcessing.h
latex/: _file_processing_8h.tex  _planet_8h.tex  _planet_storage_8h.tex  _server_8h.tex  _text_processing_8h.tex  annotated.tex  class_file_processing.tex  class_planet.tex  class_planet_storage.tex  class_server.tex  class_text_processing.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  (+2 more)
(+26 files in other folders)
